--- a/DSW01/grid/TREINO/style.css
+++ b/DSW01/grid/TREINO/style.css
@@ -1,15 +1,36 @@
 body{
   background-color: black;
+  margin: 0;
 }
 .container{
-  background-color: blueviolet;
-  height: 400px;
-  width: 800px;
-  display: flex;
-  flex-direction: row;
+  background-color: red;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-areas: 
+  "header header header header header"
+  "nav main main main main"
+  "nav main main main main"
+  "nav main main main main"
+  "footer footer footer footer footer";
 }
-.box{
+
+header{
+  grid-area: header;
+  background-color: blueviolet;
+}
+
+nav{
+  grid-area: nav;
+  background-color: blue;
+}
+
+main{
+  grid-area: main;
+  background-color: aqua;
+}
+
+footer{
+  grid-area: footer;
   background-color: gray;
-  width: 200px;
-  height: auto;
 }
